--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,15 @@ body {
 }
 
 .container {
-max-width: 1220px;
+    max-width: 1220px;
     padding: 0 10px;
     margin: 0 auto;
+}
+
+.main__title {
+    font-size: 64px;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
 
 .header {
@@ -102,7 +108,7 @@ max-width: 1220px;
 
 .title--m {
     display: inline-block;
-    transform: translate(-40px,275px);
+    transform: translate(-40px, 275px);
 
 }
 
@@ -110,5 +116,203 @@ max-width: 1220px;
     display: inline-block;
     position: relative;
     z-index: -1;
-    transform: translate(-100px,410px);
+    transform: translate(-100px, 410px);
 }
+
+.choose-color {
+    padding: 45px 0 180px;
+    text-align: center;
+}
+
+.choose-color__title {
+    font-size: 36px;
+    font-weight: 700;
+    max-width: 555px;
+    margin: 0 auto 20px;
+}
+
+.choose-color__text {
+    max-width: 555px;
+    margin: 0 auto 80px;
+}
+
+.choose-color__list {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+}
+
+.choose__color-btn {
+    border-radius: 20px;
+    border: 1px solid #777;
+    padding: 50px 55px;
+}
+
+.composition {
+    margin-bottom: 180px;
+}
+
+.composition__title {
+    text-align: center;
+}
+
+.composition__text {
+    text-align: center;
+    max-width: 655px;
+    margin: 0 auto 40px;
+}
+
+.composition__inner {
+    max-width: 625px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.composition__inner-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.composition__inner-text p {
+    width: 230px;
+}
+
+.case {
+    background-color: #fafafa;
+    padding: 80px 0 100px;
+    text-align: center;
+}
+
+.case__text {
+    max-width: 825px;
+    margin: 0 auto 40px;
+}
+
+.energy__title {
+    padding-top: 160px;
+    margin-bottom: 40px;
+}
+
+.energy__num {
+    font-size: 210px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.energy__text {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.audio {
+    /*position: relative;*/
+    background-image: url("../images/Group 4.png");
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+
+}
+
+/*.audio::before {*/
+/*    content: '';*/
+/*    background-image: url("../images/audio.jpg");*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: top center;*/
+/*    background-size: cover;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    z-index: -2;*/
+/*}*/
+
+/*.audio::after {*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    background-image: url("../images/sound.png");*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: bottom center;*/
+/*    background-size: cover;*/
+/*    bottom: -250px;*/
+/*    height: 150vh;*/
+/*    width: 100%;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    z-index: -1;*/
+/*}*/
+
+.audio__inner {
+    min-height: 220vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.audio__box {
+    color: white;
+    text-align: center;
+    padding-bottom: 50vh;
+}
+
+.audio__text {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.btn {
+    text-transform: uppercase;
+    font-weight: 700;
+    color: black;
+    background-color: white;
+    padding: 15px 58px;
+    border-radius: 30px;
+    margin-top: 25px;
+}
+
+.footer {
+    padding: 50px 0 40px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+}
+
+.footer__text {
+    padding: 20px 0;
+}
+
+.footer__list {
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+    gap: 0 20px;
+}
+
+
+@media (max-width: 1000px) {
+    .header {
+
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
