--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,23 @@ body {
     right: 0;
     bottom: 0;
     width: 100%;
-    background: linear-gradient(180deg, #CADBEB 0%, rgba(235, 235, 235, 0.00) 100%);
     z-index: -2;
+}
+
+.header__content-images:has(.color--blue.content-item__active)::before {
+    background: linear-gradient(180deg, #CADBEB 0%, rgba(235, 235, 235, 0.00) 100%);
+}
+.header__content-images:has(.color--black.content-item__active)::before {
+    background: linear-gradient(180deg, #B6B6B6 0%, rgba(235, 235, 235, 0.00) 100%);
+}
+.header__content-images:has(.color--green.content-item__active)::before {
+    background: linear-gradient(180deg, #DDEAD9 0%, rgba(235, 235, 235, 0.00) 100%);
+}
+.header__content-images:has(.color--red.content-item__active)::before {
+    background: linear-gradient(180deg, #F3D6D1 0%, rgba(235, 235, 235, 0.00) 100%);
+}
+.header__content-images:has(.color--white.content-item__active)::before {
+    background: linear-gradient(180deg, #FAFAFA 0%, rgba(235, 235, 235, 0.00) 100%);
 }
 
 .title {
@@ -119,6 +134,15 @@ body {
     transform: translate(-100px, 410px);
 }
 
+.content-item {
+    display: none;
+}
+
+.content-item.content-item__active {
+    display: inline-block;
+
+}
+
 .choose-color {
     padding: 45px 0 180px;
     text-align: center;
@@ -146,6 +170,10 @@ body {
     border-radius: 20px;
     border: 1px solid #777;
     padding: 50px 55px;
+}
+
+.choose__color-btn--active {
+    display: none;
 }
 
 .composition {
